[gd_scene load_steps=4 format=3 uid="uid://co4u2r8cbm3k8"]

[ext_resource type="Script" path="res://Apple.gd" id="1_xu04f"]
[ext_resource type="Texture2D" uid="uid://clcyu1bhg11s8" path="res://Assets/Pixelart/apple.png" id="2_4tpgv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mnfii"]
radius = 8.58273

[node name="Apple" type="Node2D"]
scale = Vector2(0.049, 0.049)
script = ExtResource("1_xu04f")

[node name="Area2D" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
scale = Vector2(0.98923, 1)
texture = ExtResource("2_4tpgv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, -1)
scale = Vector2(1.16513, 1.02532)
shape = SubResource("CircleShape2D_mnfii")

[node name="bounceTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="timeout" from="bounceTimer" to="." method="_on_bounce_timer_timeout"]
